# rust-web-common

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: branch-protection.yaml  codeql.yml
.zed/: settings.json
src/: lib.rs  telemetry.rs  templating.rs
src/templating/: digest_assets.rs
