[package]
name = "rust-web-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0" }
thiserror = { version = "2.0.12" }
tracing = { version = "0.1.41" }
tracing-opentelemetry = { version = "0.30.0" }
tracing-subscriber = "0.3"
