[package]
name = "rust-web-common"
version = "0.1.0"
edition = "2024"

[dependencies]
handlebars = { version = "6.4.0", features = ["dir_source"] }
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
serde_json = "1.0.149"
thiserror = { version = "2.0.17" }
tracing = { version = "0.1.44" }
tracing-opentelemetry = { version = "0.32.0" }
tracing-subscriber = "0.3"
